<resources>
    <string name="app_name">INN COFFEE</string>
    <string name="email">Correo Electronico</string>
    <string name="facebook_app_id">2318764478221653</string>
    <string name="fb_login_protocol_scheme">fb2318764478221653</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar Sesion</string>
    <string name="register">Registrarse Por Correo</string>
    <string name="full_name">Nombre completo</string>
    <string name="center">Centro INN Office</string>
    <string name="phone">Teléfono</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="already_having_account">Tienes ya una cuenta?</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="not_having_account">¿Aún no tienes cuenta?</string>
    <string name="sign_up">Registrarse</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="quiero_string">QUIERO</string>
    <string name="mis_ofertas_string">MIS OFERTAS</string>
    <string name="mis_puntos_string">MIS PUNTOS</string>
    <string name="quiero_ek1_string">QUIERO</string>
    <string name="pago_y_gano_string">PAGO Y GANO</string>
    <string name="pago_y_gano_ek1_string">PAGO Y GANO</string>
    <string name="mis_ofertas_ek1_string">MIS OFERTAS</string>
    <string name="mis_puntos_ek1_string">MIS PUNTOS</string>
    <string name="facebook_ek1_string">Facebook</string>
    <string name="google_string">Google</string>
    <string name="registrarse_con_correo_string">Registrarse con correo</string>
    <string name="iniciar_sesi_n_string">Iniciar sesin</string>
    <string name="__a_n_no_tienes_cuenta__string">An no tienes cuenta?</string>
    <string name="email_string">Email</string>
    <string name="inicio_string">Inicio</string>
    <string name="pagos_string">Pagos</string>
    <string name="pedidos_string">Pedidos</string>
    <string name="hola__jose_string">Hola, Jose</string>
    <string name="ofertas_string">Ofertas</string>
    <string name="invita_a_tus_amigos_string">Invita a tus\
amigos</string>
    <string name="__ir_a_inn_offices_string"> IR A INN OFFICES</string>
    <string name="cerrar_sesi_n_string">Cerrar sesin</string>
    <string name="quiero_ek2_string">QUIERO</string>
    <string name="nuevo_pedido_string">Nuevo  pedido</string>
    <string name="mis_pedidos_string">Mis pedidos</string>
    <string name="mis_ofertas_ek5_string">MIS OFERTAS</string>
    <string name="nuevo_taz_n_con_cereales_string">NUEVO\
TAZN\
CON\
CEREALES</string>
    <string name="ofertas_ek1_string">Ofertas</string>
    <string name="mensajes_string">Mensajes</string>
    <string name="__20__string">-20%</string>
    <string name="nuevo_taz_n_con_cereales_ek1_string">NUEVO\
TAZN\
CON\
CEREALES</string>
    <string name="__20__ek1_string">-20%</string>
    <string name="nuevo_taz_n_con_cereales_ek2_string">NUEVO\
TAZN\
CON\
CEREALES</string>
    <string name="__20__ek2_string">-20%</string>
    <string name="mis_puntos_ek5_string">MIS PUNTOS</string>
    <string name="_13_07_2019_string">13/07/2019</string>
    <string name="_5_50__string">5,50</string>
    <string name="puntos_acumulados__string">Puntos acumulados:</string>
    <string name="_55_string">55</string>
    <string name="_1507_2019_string">1507/2019</string>
    <string name="_10__string">10</string>
    <string name="puntos_acumulados__ek1_string">Puntos acumulados:</string>
    <string name="_100_string">100</string>
    <string name="total_de_puntos__string">TOTAL DE PUNTOS:</string>
    <string name="_155_string">155</string>
    <string name="__qu__puedo_hacer_con_mis_puntos__string">Qu puedo hacer\
con mis puntos?</string>
    <string name="pago_y_gano_ek5_string">PAGO Y GANO</string>
    <string name="mis_pedidos_ek1_string">Mis pedidos</string>
    <string name="configurar_pago_en_1_click_string">Configurar pago en 1 click</string>
    <string name="mis_puntos_ek6_string">Mis puntos</string>
    <string name="quiero___nuevo_pedido_string">QUIERO / NUEVO PEDIDO</string>
    <string name="selecciona_establecimiento_string">Selecciona\
establecimiento</string>
    <string name="quiero___nuevo_pedido_ek1_string">QUIERO / NUEVO PEDIDO</string>
    <string name="inn_coffee_nervi_n_string">INN COFFEE\
Nervin</string>
    <string name="c_mo_llegar_string">Cmo llegar</string>
    <string name="quiero___nuevo_pedido_ek2_string">QUIERO / NUEVO PEDIDO</string>
    <string name="carta_desayunos_string">Carta desayunos</string>
    <string name="carta_comidas_string">Carta comidas</string>
    <string name="__tienes_alg_n_tipo_de_alergia_alimentaria__string">Tienes algn tipo\
de alergia alimentaria?</string>
    <string name="quiero___nuevo_pedido_ek3_string">QUIERO / NUEVO PEDIDO</string>
    <string name="carta_desayunos_ek1_string">Carta desayunos</string>
    <string name="carta_comidas_ek1_string">Carta comidas</string>
    <string name="marca_tus_alergias_alimentarias_antes_de_hacer_tu_pedido_string">Marca tus alergias\
alimentarias antes\
de hacer tu pedido</string>
    <string name="ahora_s____buen_provecho__string">Ahora s,\
Buen provecho!</string>
    <string name="quiero___nuevo_pedido_ek4_string">QUIERO / NUEVO PEDIDO</string>
    <string name="carta_desayunos_ek2_string">Carta desayunos</string>
    <string name="carta_comidas_ek2_string">Carta comidas</string>
    <string name="marca_tus_alergias_alimentarias_antes_de_hacer_tu_pedido_ek1_string">Marca tus alergias\
alimentarias antes\
de hacer tu pedido</string>
    <string name="ahora_s____buen_provecho__ek1_string">Ahora s,\
Buen provecho!</string>
    <string name="x_string">X</string>
    <string name="quiero___nuevo_pedido_ek5_string">QUIERO / NUEVO PEDIDO</string>
    <string name="tostadas_string">TOSTADAS</string>
    <string name="bebidas_string">BEBIDAS</string>
    <string name="quiero___nuevo_pedido_ek6_string">QUIERO / NUEVO PEDIDO</string>
    <string name="carta_desayunos_ek6_string">Carta desayunos</string>
    <string name="carta_comidas_ek3_string">Carta comidas</string>
    <string name="marca_tus_alergias_alimentarias_antes_de_hacer_tu_pedido_ek2_string">Marca tus alergias\
alimentarias antes\
de hacer tu pedido</string>
    <string name="ahora_s____buen_provecho__ek2_string">Ahora s,\
Buen provecho!</string>
    <string name="x_ek1_string">X</string>
    <string name="quiero___nuevo_pedido_ek7_string">QUIERO / NUEVO PEDIDO</string>
    <string name="carta_comidas_ek4_string">Carta comidas</string>
    <string name="tostadas___cl_sicas_string">TOSTADAS / CLSICAS</string>
    <string name="aceite_de_oliva_string">Aceite\
de Oliva</string>
    <string name="el_cl_sico_que_nunca_falla__con_aove__string">El clsico que nunca\
falla, con AOVE.</string>
    <string name="___string">+</string>
    <string name="___ek1_string">-</string>
    <string name="_0_string">0</string>
    <string name="_1_20__string">1,20</string>
    <string name="a_adir_string">AADIR</string>
    <string name="entera_string">Entera</string>
    <string name="media_string">Media</string>
    <string name="seleccionar_tipo_de_pan_string">Seleccionar tipo de pan</string>
    <string name="quiero___nuevo_pedido_ek8_string">QUIERO / NUEVO PEDIDO</string>
    <string name="caf_s_string">Cafs</string>
    <string name="t__e_infusiones_string">T e\
infusiones</string>
    <string name="bebidas_ek4_string">Bebidas</string>
    <string name="zumos_string">Zumos</string>
    <string name="quiero___nuevo_pedido_ek9_string">QUIERO / NUEVO PEDIDO</string>
    <string name="tostadas_cl_sicas_string">Tostadas\Clasicas</string>
    <string name="tostadas_originales_string">Tostadas\
Originales</string>
    <string name="tostadas_extraordinarias_string">Tostadas\
Extraordinarias</string>
    <string name="quiero___nuevo_pedido_ek10_string">QUIERO / NUEVO PEDIDO</string>
    <string name="carta_comidas_ek5_string">Carta comidas</string>
    <string name="tipos_de_panes_string">TIPOS DE PANES</string>
    <string name="chapata_string">Chapata</string>
    <string name="ideal_para_combinar_con__completar__string">Ideal para combinar\con (completar)</string>
    <string name="___ek2_string">+</string>
    <string name="___ek3_string">-</string>
    <string name="_0_ek1_string">0</string>
    <string name="_1_20__ek1_string">1,20</string>
    <string name="seleccionar_string">SELECCIONAR</string>
    <string name="quiero___nuevo_pedido_ek11_string">QUIERO / NUEVO PEDIDO</string>
    <string name="carta_comidas_ek6_string">Carta comidas</string>
    <string name="tostadas___cl_sicas_ek1_string">TOSTADAS / CLSICAS</string>
    <string name="aceite_de_oliva_ek1_string">Aceite\
de Oliva</string>
    <string name="el_cl_sico_que_nunca_falla__con_aove__ek1_string">El clsico que nunca\
falla, con AOVE.</string>
    <string name="___ek4_string">+</string>
    <string name="___ek5_string">-</string>
    <string name="_1_string">1</string>
    <string name="_1_20__ek2_string">1,20</string>
    <string name="a_adir_ek1_string">AADIR</string>
    <string name="entera_ek1_string">Entera</string>
    <string name="media_ek1_string">Media</string>
    <string name="chapata__cambiar__string">Chapata (cambiar)</string>
    <string name="tostadas_ek1_string">TOSTADAS</string>
    <string name="bebidas_ek5_string">BEBIDAS</string>
    <string name="total__1_20__string">Total: 1,20</string>
    <string name="finalizar_pedido_string">FINALIZAR PEDIDO</string>
    <string name="quiero___nuevo_pedido_ek12_string">QUIERO / NUEVO PEDIDO</string>
    <string name="entera___aceite___chapata_string">Entera / Aceite / Chapata</string>
    <string name="_1_20__ek3_string">1,20</string>
    <string name="_2_string">2</string>
    <string name="correo_electr_nico_string">Correo electronico</string>
    <string name="crear_cuenta_string">Crear Cuenta</string>
    <string name="nombre_string">Nombre</string>
    <string name="contrase_a_string">Contrasea</string>
    <string name="repetir_contrase_a_string">Repetir contrasea</string>
    <string name="quiero___nuevo_pedido_ek13_string">QUIERO / NUEVO PEDIDO</string>
    <string name="inn_coffee_nervi_n_ek1_string">INN COFFEE\
Nervin</string>
    <string name="c_mo_llegar_ek1_string">Como llegar</string>
    <string name="__has_olvidado_tu_contrase_a__string">Has olvidado tu contrasea?</string>
    <string name="caf_s_ek1_string">CAFS</string>
    <string name="carta_comidas_ek10_string">Carta comidas</string>
    <string name="tostadas___originales_string">TOSTADAS / ORIGINALES</string>
    <string name="tostadas___extraordinarias_string">TOSTADAS / EXTRAORDINARIAS</string>
    <string name="combos_string">COMBOS</string>
    <string name="sandwiches_string">SANDWICHES</string>
    <string name="platos_y_tapas_string">PLATOS Y TAPAS</string>
    <string name="postres_string">POSTRES</string>
    <string name="elige_primer_plato_string">Elige primer plato</string>
    <string name="elige_segundo_plato_string">Elige segundo plato</string>
    <string name="elige_bebida_string">Elige bebida</string>
    <string name="elige_postre_ek1_string">Elige postre</string>
    <string name="tienes_alg_n_tipo_de_alergia_alimentaria">¿Tienes algún tipo de alergia alimentaria?</string>
</resources>