<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cartacomidas">

    <TextView
        android:id="@+id/combos"
        android:layout_width="306dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/combos_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/sandwiches"
        android:layout_width="357dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:text="@string/sandwiches_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/combos"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/platosytapas"
        android:layout_width="357dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:text="@string/platos_y_tapas_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sandwiches"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/postres"
        android:layout_width="357dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:text="@string/postres_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/platosytapas"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bebidas"
        android:layout_width="357dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:text="@string/bebidas_string"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postres"
        app:layout_constraintVertical_bias="0.135" />
</androidx.constraintlayout.widget.ConstraintLayout>