<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/principalactivitybackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingBottom="50dp"
    tools:context="com.rakshasa.inncoffee.RegistroLogin.Login">

    <ImageView
        android:id="@+id/imageViewTe"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/inncoffeelogo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/menu_registronew"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColorHint="#FFFffFFF"
        android:textColor="#ffffffff"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/menu_registronew"
        android:hint="@string/password"
        android:textColorHint="#FFffFFFF"
        android:textAlignment="center"
        android:textColor="#ffffffff"
        android:inputType="textPassword"
        android:padding="10dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/menu_registronew1"
        android:buttonTint="#FFFFFF"
        android:gravity="center"
        android:text="Recordar Usuario"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/restablecer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_registronew1"
        android:gravity="center"
        android:text="@string/__has_olvidado_tu_contrase_a__string"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/registro_negro"
        android:padding="5dp"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />


</LinearLayout>