<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bebidas">

    <TextView
        android:id="@+id/cafes"
        android:layout_width="334dp"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/caf_s_ek1_string"
        android:textColor="@color/aceite_de_oliva_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/bebidas"
        android:layout_width="334dp"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/bebidas_ek5_string"
        android:textColor="@color/aceite_de_oliva_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <TextView
        android:id="@+id/teeinfusiones"
        android:layout_width="233dp"
        android:layout_height="98dp"
        android:gravity="center"
        android:text="@string/t__e_infusiones_string"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        tools:textAlignment="center" />

    <TextView
        android:id="@+id/zumos"
        android:layout_width="311dp"
        android:layout_height="161dp"
        android:gravity="center|top"
        android:text="@string/zumos_string"
        android:textColor="@color/aceite_de_oliva_color"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        tools:textAlignment="center" />
</androidx.constraintlayout.widget.ConstraintLayout>