<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonDesayuno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="346dp"
            android:layout_marginBottom="26dp"
            android:text="@string/carta_desayunos_string"
            app:layout_constraintBottom_toTopOf="@+id/buttonComida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonComida"
            android:layout_width="146dp"
            android:layout_height="46dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="49dp"
            android:text="@string/carta_comidas_string"
            app:layout_constraintBottom_toTopOf="@+id/buttonAlergia"
            app:layout_constraintEnd_toEndOf="@+id/buttonDesayuno"
            app:layout_constraintTop_toBottomOf="@+id/buttonDesayuno" />

        <Button
            android:id="@+id/buttonAlergia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:text="@string/__tienes_alg_n_tipo_de_alergia_alimentaria__string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonComida" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>