<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tostadas">

    <TextView
        android:id="@+id/tostadasclasicas"
        android:layout_width="261dp"
        android:layout_height="154dp"
        android:gravity="center"
        android:text="@string/tostadas___cl_sicas_string"
        android:textAlignment="center"
        android:textColor="#E6CA6C"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/tostadasoriginal"
        android:layout_width="261dp"
        android:layout_height="154dp"
        android:gravity="center"
        android:text="@string/tostadas___originales_string"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/tostadasextraordinarias"
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:gravity="center"
        android:text="@string/tostadas___extraordinarias_string"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />
</androidx.constraintlayout.widget.ConstraintLayout>