<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nuevopedido2">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="209dp"
        android:layout_height="266dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.220"
        app:srcCompat="@drawable/inncoffeelogo" />

    <Button
        android:id="@+id/cartadesayuno"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/rect_ngulo_1471_ek3_shape"
        android:text="@string/carta_desayunos_ek1_string"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.264" />

    <Button
        android:id="@+id/cartacomidas"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/rect_ngulo_1484_shape"
        android:text="@string/carta_comidas_ek10_string"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartadesayuno"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/alojenos"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/rect_ngulo_1471_ek1_shape"
        android:text="@string/tienes_alg_n_tipo_de_alergia_alimentaria"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartacomidas" />
</androidx.constraintlayout.widget.ConstraintLayout>