<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/combo_1"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonPplato"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="206dp"
        android:text="@string/elige_primer_plato_string" />

    <Button
        android:id="@+id/buttonSPlato"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonPostre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="278dp"
        android:text="@string/elige_segundo_plato_string" />

    <Button
        android:id="@+id/buttonBebida"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonPostre"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="210dp"
        android:text="@string/elige_bebida_string" />

    <Button
        android:id="@+id/buttonPostre"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonPplato"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="142dp"
        android:text="@string/elige_postre_ek1_string" />

    <Button
        android:id="@+id/buttonAnadirC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonPplato"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-93dp"
        android:layout_marginBottom="-1dp"
        android:text="AÑADIR COMBO" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="66dp"
        android:text="MENÚ COMPLETO"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="81dp"
        android:text="7.80"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="82dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FDFDFE" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="40dp"
        android:text="COMBOS"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
</RelativeLayout>